@@ -1,0 +1,9 @@
+FROM ruby:2.3
+LABEL maintainer="Florian Wilhelm"
+
+RUN gem install asciidoctor ingo
+
+WORKDIR /documents
+VOLUME /documents
+
+CMD ["/bin/bash"]
